6716
This is also a bit inconsistent (Scala version 2.10.0-20120511-110655-3511e5960d (OpenJDK 64-Bit Server VM, Java 1.7.0_03)):
```scala
package a {
  class Foo(private[a] foo: String)
  class Bar(protected[a] bar: String)
}
```
```scala
% scalac si-5065.scala
si-5065.scala:3: error: 'val' expected but identifier found.
  class Bar(protected[a] bar: String)
                         ^
si-5065.scala:4: error: identifier expected but '}' found.
}
^
```

At least the error message (and recovery, see second error) needs some fixes.
